--- a/MP3/README
+++ b/MP3/README
@@ -14,9 +14,9 @@ A uint8_t type was used for the virtual buffer. This was to make sizing easier. 
 
 =====Testing=====
 
-To run the test program scripts, first make sure the module is running. Then, make sure the node is valid. The node is currently set to device 246. Run:
+To run the test program scripts, first make sure the module is running. Then, create a node. Run:
 cat /proc/devices
-and look for the device named "mp3_cdev". If it is not set to 246, remove the node, and run
+and look for the device named "mp3_cdev". On my testing, I found it to be 246
 sudo mknod node c [node number] 0
 
 ./run1.sh will run 1 instance of the worker thread with 200MB Memory, Random Locality Access, and 10,000 accesses per iteration.
